[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nthesis"
version = "0.1.0"
description = "Python client for the nthesis API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31",
]
authors = [
  { name = "Nthesis" },
]
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://nthesis.ai"
Repository = "https://github.com/nthesis/nthesis-python"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nthesis = ["py.typed"]
